--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -42,14 +42,30 @@ body {
   position: relative;
   top: 6.5vh;
   height: 95px;
+  padding-left: 6.5vw;
+}
+
+.spinner {
+  position: absolute;
+  border-radius: 50%;
+  width: 145px;
+  height: 145px;
+  border-top: 4px solid #fffbfb00;
+  border-right: 4px solid #f9f9f9;
+  border-bottom: 4px solid #ffffff00;
+  border-left: 4px solid #f3f3f3;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+  top: -25px;
 }
 
 img.logo {
-  height: 127px;
-  width: 127px;
+  height: 125px;
+  width: 125px;
   position: absolute;
-  top: -16px;
-  left: 7vw;
+  top: -14px;
+  margin-left: 10px;
 }
 
 .top-menu ul {
@@ -203,13 +219,14 @@ a.underline2:hover {
   position: absolute;
   left: 0;
   right: 0;
-  top: 40.2vh;
+  top: 40vh;
 }
 .quote h1 {
-  font-size: 6.32vw;
+  opacity: 0;
+  font-size: 6.3vw;
   font-weight: 800;
   color: white;
-  margin-bottom: 6vh;
+  margin-bottom: 8vh;
 }
 .quote span {
   color: #113f9c;
@@ -239,10 +256,111 @@ a.underline2:hover {
   outline: none;
 }
 
+.black {
+  background: #232323;
+  color: white;
+  padding: 1.9vw 6.7vw;
+}
+.black h5 {
+  font-size: 1.40556288vw;
+  padding-bottom: 0.15em;
+}
+.black p {
+  color: #9e9e9e;
+  font-size: 0.9882864vw;
+  font-weight: 500;
+  padding-right: 8vw;
+}
+
+.white {
+  background: #ffff;
+  color: black;
+  padding: 4.9vw 6.5vw;
+}
+
+.blue {
+  background: #113f9c;
+  padding: 4.9vw 6.5vw;
+  color: white;
+}
+
 footer {
   background: #191f23;
-  padding: 3vw 0;
-  color: #ffff;
+  color: #B0B0B0;
+}
+
+.foot-row {
+  padding: 4.9vw 6.5vw;
+}
+
+.sec1,
+.sec2,
+.sec3 {
+  position: relative;
+  padding-right: 60px !important;
+}
+.sec1 p,
+.sec2 p,
+.sec3 p {
+  font-size: 1.1713024vw;
+  line-height: 28px;
+  color: #B0B0B0;
+}
+.sec1 h4,
+.sec2 h4,
+.sec3 h4 {
+  margin: 0;
+  font-size: 1.7569536vw;
+  font-weight: 500;
+  padding-bottom: 20px;
+  margin-bottom: 30px;
+  position: relative;
+  color: #fff;
+}
+.sec1:after,
+.sec2:after,
+.sec3:after {
+  content: "";
+  height: 4px;
+  background: #113f9c;
+  position: absolute;
+  top: 37px;
+  width: 11%;
+}
+
+.bot-bar {
+  border-top: 1px solid #303639;
+  padding: 1.57vw 6.5vw;
+}
+.bot-bar p {
+  margin-bottom: 0;
+  font-size: 1vw;
+  padding-top: 0.7vw;
+  color: #626d82;
+}
+
+.logo3 {
+  height: 40px;
+  width: 40px;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+}
+
+#gotop {
+  background: #113f9c;
+  display: none;
+  border: none;
+  position: fixed;
+  bottom: 1vw;
+  right: 1vw;
+  padding: 12px 14px 7px 15px;
+  border-radius: 4%;
+  outline: none;
+}
+#gotop i {
+  color: white;
+  font-size: 27px;
 }
 
 /*# sourceMappingURL=style.css.map */
