--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -53,30 +53,30 @@ body {
   position: relative;
   top: 6.5vh;
   height: 95px;
+  padding-left: 6.5vw;
 }
-// .spinner{
-//   position: relative;
-//       bottom: 5.9vh;
-//       left: 4.7vw;
-//       border-radius: 50%;
-//       width: 155px;
-//       height: 155px;
-//       padding-left: 5px;
-//       border-top: 5px solid #8e3636d6;
-//       border-right: 5px solid #ffffff;
-//       border-bottom: 5px solid #000000de;
-//       border-left: 5px solid #ffffff;
-//       -webkit-animation: spin 18s linear infinite;
-//       -moz-animation: spin 18s linear infinite;
-//       animation: spin 10s linear infinite;
-// }
+
+.spinner {
+  position: absolute;
+  border-radius: 50%;
+  width: 145px;
+  height: 145px;
+  border-top: 4px solid #fffbfb00;
+  border-right: 4px solid #f9f9f9;
+  border-bottom: 4px solid #ffffff00;
+  border-left: 4px solid #f3f3f3;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+  top: -25px;
+}
 
 img.logo {
-  height: 127px;
-  width: 127px;
+  height: 125px;
+  width: 125px;
   position: absolute;
-  top: -16px;
-  left: 7vw;
+  top: -14px;
+  margin-left: 10px;
 }
 
 .top-menu {
@@ -245,13 +245,14 @@ a.underline2 {
   position: absolute;
   left: 0;
   right: 0;
-  top: 40.2vh;
+  top: 40vh;
 
   h1 {
-    font-size: 6.32vw;
+    opacity: 0;
+    font-size: 6.3vw;
     font-weight: 800;
     color: white;
-    margin-bottom: 6vh;
+    margin-bottom: 8vh;
   }
 
   span {
@@ -285,10 +286,108 @@ a.underline2 {
     outline: none;
   }
 }
+// ********** Home Page ***********
+.black{
+  background: #232323;
+  color: white;
+  padding: 1.9vw 6.7vw;
+  h5{
+    font-size: 19.2*$vw;
+    padding-bottom: .15em;
+  }
+  p{
+    color: #9e9e9e;
+    font-size: 13.5*$vw;
+    font-weight: 500;
+    padding-right: 8vw;
+  }
+}
+.white{
+  background: #ffff;
+  color: black;
+  padding: 4.9vw 6.5vw;
+}
+.blue{
+  background: $primary;
+  padding: 4.9vw 6.5vw;
+  color: white;
+}
 // ********** Footer ***********
 
 footer {
   background: $footer;
-  padding: 3vw 0;
-  color: #ffff;
+  color: #B0B0B0;
+}
+
+.foot-row {
+  padding: 4.9vw 6.5vw;
+}
+
+.sec1,
+.sec2,
+.sec3 {
+  position: relative;
+  padding-right: 60px !important;
+
+  p{
+    font-size: 16*$vw;
+    line-height: 28px;
+    color: #B0B0B0;
+  }
+
+  h4 {
+    margin: 0;
+    font-size: 24*$vw;
+    font-weight: 500;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    position: relative;
+    color: #fff;
+  }
+
+  &:after {
+    content: "";
+    height: 4px;
+    background: #113f9c;
+    position: absolute;
+    top: 37px;
+    width: 11%;
+  }
+}
+
+.bot-bar {
+  border-top: 1px solid #303639;
+  padding: 1.57vw 6.5vw;
+
+  p {
+    margin-bottom: 0;
+    font-size: 1vw;
+    padding-top: 0.7vw;
+    color: #626d82;
+  }
+}
+
+.logo3 {
+  height: 40px;
+  width: 40px;
+  -webkit-animation: spin 10s linear infinite;
+  -moz-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+}
+
+#gotop {
+  background: $primary;
+  display: none;
+  border: none;
+  position: fixed;
+  bottom: 1vw;
+  right: 1vw;
+  padding: 12px 14px 7px 15px;
+  border-radius: 4%;
+  outline: none;
+  // transition: all 0.5s linear;
+  i {
+    color: white;
+    font-size: 27px;
+  }
 }
