--- a/wp-content/themes/mm/style.css
+++ b/wp-content/themes/mm/style.css
@@ -1,366 +1,17 @@
-/*
-Theme Name: MM Plastics
-Author: Akash Yadav
-Author URI:
-Description: A Web Project for Plastic Industry
-Version: 1.0.0
-License: GNU General Public License v2 or later
-License URI: LICENSE
-Text Domain:
-Tags:
-*/
-/*/
-/////////////////////   Global /////////////////*/
-body {
-  font-family: "Montserrat", sans-serif;
-}
+/* Error: expected "{".
+ *     ,
+ * 365 | }
+ *     |  ^
+ *     '
+ *   style.scss 365:2  root stylesheet */
 
-::-webkit-scrollbar {
-  display: none;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a     \2577 \a 365 \2502  }\d\a     \2502   ^\a     \2575 \a   style.scss 365:2  root stylesheet';
 }
-
-.hero {
-  height: 100vh;
-  position: relative;
-  background-image: url("images/bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-attachment: fixed;
-}
-
-.overlay {
-  z-index: 2;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-width: 0;
-  height: inherit;
-}
-
-#navbar1 {
-  background: #113f9c;
-  width: 83.5vw;
-  position: relative;
-  top: 6.5vh;
-  height: 95px;
-  padding-left: 6.5vw;
-}
-
-.spinner {
-  position: absolute;
-  border-radius: 50%;
-  width: 145px;
-  height: 145px;
-  border-top: 4px solid #fffbfb00;
-  border-right: 4px solid #f9f9f9;
-  border-bottom: 4px solid #ffffff00;
-  border-left: 4px solid #f3f3f3;
-  -webkit-animation: spin 10s linear infinite;
-  -moz-animation: spin 10s linear infinite;
-  animation: spin 10s linear infinite;
-  top: -25px;
-}
-
-img.logo {
-  height: 125px;
-  width: 125px;
-  position: absolute;
-  top: -14px;
-  margin-left: 10px;
-}
-
-.top-menu ul {
-  padding-right: 4vw;
-  padding-top: 5px;
-  margin-bottom: 0;
-}
-.top-menu li {
-  display: inline;
-  padding: 0 1.3177152vw;
-  transition: all 0.5s ease-out;
-}
-
-a.underline {
-  padding: 34px 0;
-  display: inline;
-  position: relative;
-  font-size: 15px;
-  color: #ffff;
-  text-decoration: none;
-  overflow: hidden;
-}
-a.underline:hover {
-  color: #87aad0;
-}
-
-.underline:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  width: 0;
-  top: 86px;
-  background: #ffff;
-  height: 3px;
-  transition-property: width;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-}
-
-.underline:active:after,
-.underline:focus:after,
-.underline:hover:after {
-  left: 0;
-  right: auto;
-  width: 100%;
-}
-
-.selected {
-  color: #87aad0 !important;
-}
-.selected:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  width: 100% !important;
-  top: 86px;
-  background: #ffff;
-  height: 3px;
-  transition-property: width;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-}
-
-#navbar2 {
-  opacity: 0;
-  background: #113f9c;
-  height: 60px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: -1;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-  transition: z-index 0.5s ease-out;
-}
-
-img.logo2 {
-  height: 65px;
-  width: 65px;
-  position: absolute;
-  top: 2px;
-  left: 9.6vw;
-}
-
-.top-menu2 ul {
-  padding-right: 4vw;
-  padding-top: 5px;
-  margin-bottom: 0;
-}
-.top-menu2 li {
-  display: inline;
-  padding: 0 1.53vw;
-  transition: all 0.5s ease-out;
-}
-
-a.underline2 {
-  padding: 52px 0;
-  display: inline;
-  position: relative;
-  font-size: 15px;
-  color: #ffff;
-  text-decoration: none;
-  overflow: hidden;
-}
-a.underline2:hover {
-  color: #87aad0;
-}
-
-.underline2:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  width: 0;
-  top: 86px;
-  background: #ffff;
-  height: 3px;
-  transition-property: width;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-}
-
-.underline2:active:after,
-.underline2:focus:after,
-.underline2:hover:after {
-  left: 0;
-  right: auto;
-  width: 100%;
-}
-
-.selected2 {
-  color: #87aad0 !important;
-}
-.selected2:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  width: 100% !important;
-  top: 86px;
-  background: #ffff;
-  height: 3px;
-  transition-property: width;
-  transition-duration: 0.5s;
-  transition-timing-function: ease-out;
-}
-
-.quote {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 40vh;
-}
-.quote h1 {
-  opacity: 0;
-  font-size: 6.3vw;
-  font-weight: 800;
-  color: white;
-  margin-bottom: 8vh;
-}
-.quote span {
-  color: #113f9c;
-}
-.quote h4 {
-  color: #9e9e9e;
-  font-weight: 500;
-  font-size: 1.647144vw;
-  margin-bottom: 6vh;
-}
-
-.btn-quote {
-  color: white;
-  background: #113f9c;
-  border: none;
-  transition: all 500ms ease;
-  font-size: 1.2079056vw;
-  font-weight: 400;
-  padding: 1vw 5vw;
-  border: 2px solid #113f9c;
-}
-.btn-quote:hover {
-  background: transparent;
-  color: #113f9c;
-}
-.btn-quote:focus {
-  outline: none;
-}
-
-.black {
-  background: #232323;
-  color: white;
-  padding: 1.9vw 6.7vw;
-}
-.black h5 {
-  font-size: 1.40556288vw;
-  padding-bottom: 0.15em;
-}
-.black p {
-  color: #9e9e9e;
-  font-size: 0.9882864vw;
-  font-weight: 500;
-  padding-right: 8vw;
-}
-
-.white {
-  background: #ffff;
-  color: black;
-  padding: 4.9vw 6.5vw;
-}
-
-.blue {
-  background: #113f9c;
-  padding: 4.9vw 6.5vw;
-  color: white;
-}
-
-footer {
-  background: #191f23;
-  color: #B0B0B0;
-}
-
-.foot-row {
-  padding: 4.9vw 6.5vw;
-}
-
-.sec1,
-.sec2,
-.sec3 {
-  position: relative;
-  padding-right: 60px !important;
-}
-.sec1 p,
-.sec2 p,
-.sec3 p {
-  font-size: 1.1713024vw;
-  line-height: 28px;
-  color: #B0B0B0;
-}
-.sec1 h4,
-.sec2 h4,
-.sec3 h4 {
-  margin: 0;
-  font-size: 1.7569536vw;
-  font-weight: 500;
-  padding-bottom: 20px;
-  margin-bottom: 30px;
-  position: relative;
-  color: #fff;
-}
-.sec1:after,
-.sec2:after,
-.sec3:after {
-  content: "";
-  height: 4px;
-  background: #113f9c;
-  position: absolute;
-  top: 37px;
-  width: 11%;
-}
-
-.bot-bar {
-  border-top: 1px solid #303639;
-  padding: 1.57vw 6.5vw;
-}
-.bot-bar p {
-  margin-bottom: 0;
-  font-size: 1vw;
-  padding-top: 0.7vw;
-  color: #626d82;
-}
-
-.logo3 {
-  height: 40px;
-  width: 40px;
-  -webkit-animation: spin 10s linear infinite;
-  -moz-animation: spin 10s linear infinite;
-  animation: spin 10s linear infinite;
-}
-
-#gotop {
-  background: #113f9c;
-  display: none;
-  border: none;
-  position: fixed;
-  bottom: 1vw;
-  right: 1vw;
-  padding: 12px 14px 7px 15px;
-  border-radius: 4%;
-  outline: none;
-}
-#gotop i {
-  color: white;
-  font-size: 27px;
-}
-
-/*# sourceMappingURL=style.css.map */
