--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -27,22 +27,6 @@ body {
   display: none;
 }
 
-.read-more {
-  color: $primary;
-  font-weight: 800;
-  cursor: pointer;
-  display: inline-block;
-  transition: all 0.3s linear;
-  &:hover{
-    transform: scale(10px);
-  }
-}
-a.anch-read{
-  text-decoration: none;
-}
-.eco{
-  transition: all 0.3s linear;
-}
 .hero {
   position: relative;
   background-image: url("images/bg.jpg");
@@ -300,14 +284,62 @@ a.underline2 {
   padding: 4.9vw 6.5vw;
   color: white;
 }
-// ********** Home Page *****************************************************
+// Read more
 
+.read-more {
+  color: $primary;
+  font-weight: 800;
+  cursor: pointer;
+  display: inline-block;
+  transition: all 0.3s linear;
+
+  &:hover {
+    transform: scale(10px);
+  }
+}
+
+a.anch-read {
+  text-decoration: none;
+}
+
+.eco {
+  transition: all 0.3s linear;
+}
+/* Underline3 */
+
+a.underline3 {
+  display: inline;
+  position: relative;
+  overflow: hidden;
+}
+
+a.underline3:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  width: 0;
+  bottom: -5px;
+  background: $primary;
+  height: 3px;
+  transition-property: width;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+
+.underline3:active:after,
+.underline3:focus:after,
+.underline3:hover:after {
+  left: 0;
+  right: auto;
+  width: 100%;
+}
+// ********** Home Page *****************************************************
 #hero-home {
   height: 100vh;
 }
-
-
 // ***** Quote ******
+
 .quote {
   text-align: center;
   position: absolute;
@@ -355,12 +387,16 @@ a.underline2 {
   }
 }
 
-.about-sec, .client-sec, .product-sec {
+.about-sec,
+.client-sec,
+.product-sec {
   margin-bottom: 5vw;
-  p{
+
+  p {
     font-size: 20*$vw;
   }
-  h1{
+
+  h1 {
     font-size: 53*$vw;
     font-weight: 800;
     color: $primary;
@@ -369,9 +405,8 @@ a.underline2 {
     // border-bottom: 4px solid #113f9c !important;
   }
 }
-
-
 // ********** Product Page ****************************************************
+
 #hero-product {
   height: 100vh;
 }
@@ -385,6 +420,7 @@ a.underline2 {
 }
 // .owl3{
 // }
+
 .product-slides {
   text-align: center;
 
@@ -400,18 +436,22 @@ a.underline2 {
 //   height: 100%;
 // }
 // ********** QualityPage *******************************************************
+
 #hero-quality {
   height: 100vh;
 }
 // ********** Technology Page *******************************************************
+
 #hero-technology {
   height: 100vh;
 }
 // ********** About Us Page *******************************************************
+
 #hero-aboutus {
   height: 100vh;
 }
 // ********** Contact Us Page *******************************************************
+
 #hero-contactus {
   height: 79vh;
 }
@@ -435,6 +475,7 @@ a.underline2 {
   transform: scale(1.2);
 }
 // ********** Footer *******************************************************
+
 footer {
   background: $footer;
   color: #B0B0B0;
@@ -448,7 +489,17 @@ footer {
 .sec2,
 .sec3 {
   position: relative;
-  padding-right: 60px !important;
+  padding-right: 59px !important;
+
+  a {
+    color: #B0B0B0;
+    text-decoration: none;
+    transition: color 0.3s linear;
+
+    &:hover {
+      color: #ffff;
+    }
+  }
 
   p {
     font-size: 16*$vw;
@@ -461,17 +512,27 @@ footer {
     font-size: 24*$vw;
     font-weight: 500;
     padding-bottom: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 34px;
     position: relative;
     color: #fff;
   }
 
-  ul{
+  ul {
     padding-left: 0;
   }
 
-  li{
+  li {
+    color: #B0B0B0;
+    font-size: 16*$vw;
+    line-height: 37*$vw;
+        // margin-bottom: 1.1vw;
+    cursor: pointer;
     list-style-type: none;
+
+    span {
+      color: #147390 !important;
+      color: #93969c;
+    }
   }
 
   &:after {
@@ -483,6 +544,33 @@ footer {
     width: 11%;
   }
 }
+
+.input-foot {
+  width: 82%;
+  background-color: #ffffff21;
+  border: 1px solid #ced4da00;
+  margin-bottom: 0.3vw;
+  color: #636f7b;
+}
+.foot_msg{
+      padding: 6px 12px 6px 12px;
+}
+#send_foot{
+  background: transparent;
+  transition: all 0.4s ease;
+  color: #5d6065;
+  border: none;
+  font-weight: 800;
+  margin-left: 1vw;
+  outline: none;
+  margin-left: 0.5vw;
+ padding: 5px 6px 0px 6px;
+  &:hover{
+    transform: scale(1.4);
+    color: $primary;
+  }
+}
+// Bot bar
 
 .bot-bar {
   border-top: 1px solid #303639;
