--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -276,7 +276,7 @@ a.underline2 {
 .white {
   background: #ffff;
   color: black;
-  padding: 4.9vw 6.5vw;
+  padding: 5.9vw 6.5vw;
 }
 
 .blue {
@@ -306,7 +306,6 @@ a.anch-read {
   transition: all 0.3s linear;
 }
 /* Underline3 */
-
 a.underline3 {
   display: inline;
   position: relative;
@@ -335,6 +334,7 @@ a.underline3:after {
   width: 100%;
 }
 // ********** Home Page *****************************************************
+
 #hero-home {
   height: 100vh;
 }
@@ -394,6 +394,7 @@ a.underline3:after {
 
   p {
     font-size: 20*$vw;
+    margin-bottom: 2vw;
   }
 
   h1 {
@@ -413,25 +414,71 @@ a.underline3:after {
 
 .product-content {
   padding: 6vh 0 !important;
-
+  p{
+    padding-right: 3vw;
+    text-align: justify;
+  }
   h3 {
+    font-weight: 800;
     margin-bottom: 5vh;
+    color: $primary;
   }
 }
-// .owl3{
-// }
+
+.owl-product {
+  position: relative;
+}
 
 .product-slides {
   text-align: center;
+  height: 320px;
 
   img {
-    width: auto !important;
-    height: 55vh;
+    // width: auto !important;
+    // height: 55vh;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: auto !important;
+    height: 100%;
+    // border: 1px solid;
   }
 }
+
+.left, .left4, .left5, .left6 {
+  position: absolute;
+  color: $primary;
+  font-size: 62*$vw;
+  left: 0;
+  top: 10vw;
+  cursor: pointer;
+  z-index: 10;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Opera and Firefox */
+}
+
+.right, .right4, .right5, .right6 {
+  position: absolute;
+  color: $primary;
+  font-size: 62*$vw;
+  right: 0;
+  top: 10vw;
+  cursor: pointer;
+  z-index: 10;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Old versions of Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Opera and Firefox */
+}
+
 // // .owl3{
 //   height: 100%;
 // }
@@ -525,7 +572,7 @@ footer {
     color: #B0B0B0;
     font-size: 16*$vw;
     line-height: 37*$vw;
-        // margin-bottom: 1.1vw;
+    // margin-bottom: 1.1vw;
     cursor: pointer;
     list-style-type: none;
 
@@ -552,10 +599,12 @@ footer {
   margin-bottom: 0.3vw;
   color: #636f7b;
 }
-.foot_msg{
-      padding: 6px 12px 6px 12px;
+
+.foot_msg {
+  padding: 6px 12px;
 }
-#send_foot{
+
+#send_foot {
   background: transparent;
   transition: all 0.4s ease;
   color: #5d6065;
@@ -564,8 +613,9 @@ footer {
   margin-left: 1vw;
   outline: none;
   margin-left: 0.5vw;
- padding: 5px 6px 0px 6px;
-  &:hover{
+  padding: 5px 6px 0;
+
+  &:hover {
     transform: scale(1.4);
     color: $primary;
   }
