--- a/wp-content/themes/mm/style.scss
+++ b/wp-content/themes/mm/style.scss
@@ -29,7 +29,7 @@ body {
 
 .hero {
   position: relative;
-  background-image: url("images/bg.jpg");
+  background-image: url("images/bg3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
@@ -464,12 +464,16 @@ a.underline3:after {
 
 .owl-product {
   position: relative;
+
 }
 
 .product-slides {
+  // border: 1px solid;
   text-align: center;
   height: 320px;
-
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   img {
     // width: auto !important;
     // height: 55vh;
